--- a/.gitconfig
+++ b/.gitconfig
@@ -10,6 +10,8 @@
 #    Branch
 #    Reset(undo work/stage/cache)
 #    Diff, difftool
+#    Log
+#    Tag
 
 # * Profile
 [user]
@@ -73,3 +75,23 @@
 	hm = difftool HEAD --tool=meld
 	mt = mergetool
 	diffall = "!git difftool --dir-diff"
+
+# ** Log
+[alias]
+	last = log -1 HEAD --name-status --date=format:'%Y-%m-%d %a %H:%M'
+	lo = log --oneline --decorate --graph
+	la = log --oneline --decorate --graph --all
+	lp = log --patch-with-stat --date=format:'%Y-%m-%d %a %H:%M'
+	ls = log --stat --date=format:'%Y-%m-%d %a %H:%M'
+	lon = log --oneline --decorate --graph --name-status
+	lan = log --oneline --decorate --graph --name-status --all
+	sh = show --color-words --date=format:'%Y-%m-%d %a %H:%M'
+	shw = show --word-diff --date=format:'%Y-%m-%d %a %H:%M'
+	visual = !gitk&
+	today = "!git lo --since midnight --author=\"$(git config user.name)\" --all"
+	week = "!git lo --since=1.weeks --author=\"$(git config user.name)\" --all"
+
+# ** Tag
+[alias]
+	tl = tag -n10
+	tlv = tag -n10 --sort version:refname
