--- a/.gitconfig
+++ b/.gitconfig
@@ -13,6 +13,9 @@
 #    Diff, difftool
 #    Log
 #    Tag
+#    Submodules
+#      Info
+#      Management
 #    Help
 #    Optimize
 #  Coding
@@ -104,6 +107,21 @@
 [alias]
 	tl = tag -n10
 	tlv = tag -n10 --sort version:refname
+
+# ** Submodules
+# *** Info
+[alias]
+	sm-status = !"git submodule status | sed 's/\\([^abcdef0-9]\\{,2\\}\\)\\([abcdef0-9]\\{7\\}\\)\\([abcdef0-9]\\{33\\}\\)\\(.*\\)/\\1\\2\\4/'; git diff --submodule"
+	sm-status-short = !"git submodule status | sed 's/\\(.\\{,2\\}\\)\\([abcdef0-9]\\{40\\}\\)/\\1/' ; git diff --submodule"
+	sm-diff = diff --submodule
+	sm-diff-full = submodule foreach 'git status --short'
+
+# *** Management
+[alias]
+	sm-init = submodule init
+	sm-update = submodule update --recursive
+	sm-update-force = submodule update --recursive --force
+	sm-update-remote = submodule update --recursive --remote --merge
 
 # ** Help
 [help]
