Push only current working branch
simple - in centralized workflow, work like upstream with an added
safety to refuse to push if the upstream branch’s name is different from
the local one.

https://git-scm.com/docs/git-config.

--- a/.gitconfig
+++ b/.gitconfig
@@ -5,6 +5,7 @@
 #  Core
 #  Include
 #  Commit
+#  Push
 #  Alias
 #    Status
 #    Commit
@@ -44,6 +45,11 @@
 # * Commit
 [commit]
 	template = ~/.gitmessage
+
+# * Push
+# Push only the current working branch
+[push]
+	default = simple
 
 # * Alias
 # ** Status
