--- a/.gitconfig
+++ b/.gitconfig
@@ -24,6 +24,7 @@
 #  Coding
 #  Color
 #  Tools
+#  Credential
 #  Git-plus
 
 # * Profile
@@ -186,6 +187,11 @@
 
 [diff "exif"]
 	textconv = exiftool
+
+# * Credential
+# 1 - 60sec; 36000 - 10 hours
+[credential]
+	helper = cache --timeout=36000
 
 # * Git-plus
 # https://github.com/tkrajina/git-plus
