Git: rename alias to remove reflogs.

--- a/.gitconfig
+++ b/.gitconfig
@@ -20,7 +20,6 @@
 #      Management
 #    Files, tree
 #    Help
-#    Optimize
 #    Mix
 #  Coding
 #  Color
@@ -150,12 +149,9 @@
 [help]
 	format = web
 
-# ** Optimize
-[alias]
-	optimize = !"git reflog expire --all --expire=now; git gc --prune=now --aggressive"
-
 # ** Mix
 [alias]
+	remove-reflogs = !"git reflog expire --all --expire=now; git gc --prune=now --aggressive"
 	alias = "!git config -l | grep alias | cut -c 7-"
 	config-list-local = config --local --list
 	config-list-global = "!git config -l | grep -v alias"
