--- a/.gitconfig
+++ b/.gitconfig
@@ -107,6 +107,7 @@
 # ** Log
 [alias]
 	last = log -1 HEAD --name-status --date=format:'%Y-%m-%d %a %H:%M'
+    last-patch = log -1 HEAD --patch-with-stat --date=format:'%Y-%m-%d %a %H:%M'
 	lo = log --oneline --decorate --graph
 	la = log --oneline --decorate --graph --all
 	lp = log --patch-with-stat --date=format:'%Y-%m-%d %a %H:%M'
