--- a/.gitconfig
+++ b/.gitconfig
@@ -167,6 +167,9 @@
 	config-list-global = "!git config -l | grep -v alias"
 	config-list-global-all = config --global --list
 	zip = archive --format=zip -o git-backup-current-dir.zip HEAD
+	# NOTE: git-branch-status - print pretty git branch sync status reports
+	#       https://github.com/bill-auger/git-branch-status
+	bs = branch-status
 
 # * Coding
 [i18n]
