--- a/.gitconfig
+++ b/.gitconfig
@@ -142,10 +142,9 @@
 # ** Submodules
 # *** Info
 [alias]
-	sm-status = !"git submodule status | sed 's/\\([^abcdef0-9]\\{,2\\}\\)\\([abcdef0-9]\\{7\\}\\)\\([abcdef0-9]\\{33\\}\\)\\(.*\\)/\\1\\2\\4/'; git diff --submodule"
-	sm-status-short = !"git submodule status | sed 's/\\(.\\{,2\\}\\)\\([abcdef0-9]\\{40\\}\\)/\\1/' ; git diff --submodule"
-	sm-status-foreach = submodule foreach 'git status --short'
-	sm-diff = diff --submodule
+	sm-info = !"git submodule status --recursive | sed 's/\\([^abcdef0-9]\\{,2\\}\\)\\([abcdef0-9]\\{7\\}\\)\\([abcdef0-9]\\{33\\}\\)\\(.*\\)/\\1\\2\\4/'"
+	sm-status = submodule foreach --recursive 'git status --short'
+	sm-diff = submodule foreach --recursive 'git diff'
 
 # *** Management
 [alias]
