--- a/.gitconfig
+++ b/.gitconfig
@@ -66,7 +66,7 @@
 	sb = status -s --branch
 	si = status -s --ignored
 	# Status Full: status project and its submodules
-	sf = "!git ss && git sm-info && git sm-state"
+	sf = "!git ss && git sm-status && git sm-state"
 
 # ** Commit
 [alias]
@@ -145,9 +145,9 @@
 # ** Submodules
 # *** Info
 [alias]
-	sm-info = !"git submodule status --recursive | sed 's/\\([^abcdef0-9]\\{,2\\}\\)\\([abcdef0-9]\\{7\\}\\)\\([abcdef0-9]\\{33\\}\\)\\(.*\\)/\\1\\2\\4/'"
+	sm-status = !"git submodule status --recursive | sed 's/\\([^abcdef0-9]\\{,2\\}\\)\\([abcdef0-9]\\{7\\}\\)\\([abcdef0-9]\\{33\\}\\)\\(.*\\)/\\1\\2\\4/'"
 	sm-state = submodule foreach --recursive 'git status --short'
-	sm-is="!git sm-info && git sm-state"
+	sm-is="!git sm-status && git sm-state"
 	sm-diff = submodule foreach --recursive 'git diff'
 	sm-summary = submodule summary --summary-limit 3
 
