--- a/.gitconfig
+++ b/.gitconfig
@@ -66,7 +66,7 @@
 	sb = status -s --branch
 	si = status -s --ignored
 	# Status Full: status project and its submodules
-	sf = "!git ss && echo && git sm-sf"
+	sf = "!f() { git ss ; if [[ -n $(git submodule status) ]]; then echo; git sm-sf; fi }; f"
 
 # ** Commit
 [alias]
