Fix alias to show full status
This alias did not work at Debian Linux(only at MinGW).

--- a/.gitconfig
+++ b/.gitconfig
@@ -66,7 +66,7 @@
 	sb = status -s --branch
 	si = status -s --ignored
 	# Status Full: status project and its submodules
-	sf = "!f() { git ss ; if [[ -n $(git submodule status) ]]; then echo; git sm-sf; fi }; f"
+	sf = "!f() { git ss; STATUS=$(git submodule status $1); if [ -n \"$STATUS\" ]; then echo; git sm-sf; fi }; f"
 	# https://github.com/yuravg/git-scripts/blob/master/bin/git-status-extra
 	se = status-extra -c
 
