--- a/.gitconfig
+++ b/.gitconfig
@@ -153,6 +153,7 @@
 	sm-status = !"git submodule status --recursive | sed 's/\\([^abcdef0-9]\\{,2\\}\\)\\([abcdef0-9]\\{7\\}\\)\\([abcdef0-9]\\{33\\}\\)\\(.*\\)/\\1\\2\\4/'"
 	sm-state = submodule foreach --recursive 'git status --short'
 	sm-diff = submodule foreach --recursive 'git diff'
+	sm-remote = submodule foreach --recursive 'git remote -v'
 	sm-summary = submodule summary --summary-limit 3
 	sm-sf="!git sm-status && echo && git sm-summary && git sm-state"
 
