--- a/.gitconfig
+++ b/.gitconfig
@@ -117,6 +117,7 @@
 [alias]
 	last = log -1 HEAD --stat --date=format:'%Y-%m-%d %a %H:%M'
 	last-patch = log -1 HEAD --patch-with-stat --date=format:'%Y-%m-%d %a %H:%M'
+	lg = log --oneline
 	lo = log --oneline --decorate --graph
 	l = "!f() { git log --oneline --decorate --graph -n 10 $@; echo "..."; }; f"
 	la = log --oneline --decorate --graph --all
