--- a/.gitconfig
+++ b/.gitconfig
@@ -132,8 +132,8 @@
 	lan = log --oneline --decorate --graph --name-status --all
 	las = log --oneline --decorate --graph --stat --all
 	# committer date, relative
-	lt   = log --decorate --graph --pretty=format:'%C(yellow)%h%Creset%C(bold red)%d%Creset %s %C(green)|%cr|%Creset <%an>'
-	lt-nog = log --decorate       --pretty=format:'%C(yellow)%h%Creset%C(bold red)%d%Creset %s %C(green)|%cr|%Creset <%an>'
+	lt     = log --decorate --graph --pretty=format:'%C(yellow)%h%Creset%C(bold red)%d%Creset%<|(70,trunc) %s %C(green)%<(12,trunc)|%cr|%Creset <%an>'
+	lt-nog = log --decorate         --pretty=format:'%C(yellow)%h%Creset%C(bold red)%d%Creset%<|(70,trunc) %s %C(green)%<(12,trunc)|%cr|%Creset <%an>'
 	# committer date, relative, and body
 	ltb  = log --decorate --graph --pretty=format:'%C(yellow)%h%Creset%C(bold red)%d%Creset %s %C(green)|%cr|%Creset <%an> %n%b'
 	lb = ltb
