Add file with global git attributes.

--- a/.gitconfig
+++ b/.gitconfig
@@ -43,6 +43,7 @@
 	editor = vim
 	excludesfile = ~/.gitignore_global
 	autocrlf = input
+	attributesfile = ~/.gitattributes_global
 
 # * Include
 [include]
