Git: add aliases to search for files and codes.

--- a/.gitconfig
+++ b/.gitconfig
@@ -14,6 +14,10 @@
 #    Reset(undo work/stage/cache)
 #    Diff, difftool
 #    Log
+#    Search
+#      Files
+#      Code
+#      Grep
 #    Tag
 #    Fetch
 #    Submodules
@@ -153,6 +157,35 @@
 	visual = !gitk&
 	today = "!git lo --since midnight --author=\"$(git config user.name)\" --all"
 	week = "!git lo --since=1.weeks --author=\"$(git config user.name)\" --all"
+
+# ** Search
+# *** Files
+	# https://github.com/fniessen/git-leuven
+	search-for-files = !git ls-tree -r --name-only HEAD | grep -i --color=auto
+	find-files = !git search-for-files
+    search-for-files-all = "!f() { \
+            for BRANCH in $(git for-each-ref --format=\"%(refname)\" refs/heads); do \
+                printf \"\n$(tput bold)$BRANCH:$(tput sgr0)\n\"; \
+                git ls-tree -r --name-only $BRANCH | nl -bn -w3 | grep --color=auto \"$1\"; \
+            done; \
+        }; f"
+	find-files-all = !git search-for-files-all
+
+# *** Code
+	search-for-code = "grep -i -I --line-number --break --heading -C 1"
+	ack = !git search-for-code
+
+# *** Grep
+	# TIPS:
+	# - i  -- ignore case
+	# -C 1 -- context
+	# --all-match
+	# -e REGEXRP; may used with: --and --or --not
+	# '--' -- Signals the end of options; the rest of the parameters are <pathspec> limiters.
+	#      Examples:
+	#          -- '*.[ch]';
+	#          -- :^Documentation
+	gr = grep -I --break --line-number --heading
 
 # ** Tag
 [alias]
