Refactor config aliases.

--- a/.gitconfig
+++ b/.gitconfig
@@ -278,7 +278,8 @@
 	alias = "!git config -l | grep alias | cut -c 7-"
 	config-list-local = config --local --list
 	config-list-global = "!git config -l | grep -v alias"
-	config-list-global-all = config --global --list
+	config-list-global-all = "!git config --list --show-origin --show-scope | grep -v alias"
+	config-list-all = config --list --show-origin --show-scope
 	zip = archive --format=zip -o git-backup-current-dir.zip HEAD
 	# NOTE: git-branch-status - print pretty git branch sync status reports
 	#       https://github.com/bill-auger/git-branch-status
